--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,8 @@ coroutineLifecycleVersion = "2.8.1"
 coreKtxVersion = "1.5.0"
 truth = "1.3.0"
 turbineVersion = "1.0.0"
+gsonVersion = "2.11.0"
+moshiVersion = "1.15.1"
 hiltNavigationCompose = "1.2.0"
 ktLintVersion = "12.1.1"
 
@@ -79,6 +81,10 @@ core-testing = { module = "androidx.arch.core:core-testing", version.ref = "core
 # test
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbineVersion" }
+
+# gson
+gson = { module = "com.google.code.gson:gson", version.ref = "gsonVersion" }
+moshi = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiVersion" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
