--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,8 +29,8 @@ geminiGenAIVersion = "0.7.0"
 
 # plugin versions
 googleServiceVersion = "4.4.2"
-kspVersion = "1.9.0-1.0.12"
-kotlinJvmVersion = "1.9.0"
+kspVersion = "1.9.24-1.0.20"
+kotlinJvmVersion = "1.9.24"
 crashlytics = "3.0.1"
 
 [libraries]
@@ -100,3 +100,4 @@ ktLint = {id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktLintVersion"}
 googleServices = { id = "com.google.gms.google-services", version.ref = "googleServiceVersion" }
 kotlinJVM = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlinJvmVersion"}
 crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics"}
+androidx-room = { id = "androidx.room", version.ref = "roomVersion"}
