--- a/.editorconfig
+++ b/.editorconfig
@@ -2,4 +2,9 @@ root = true
 
 [*.kt]
 ktlint_standard_no-wildcard-imports = disabled
+ktlint_standard_function-naming = disable
+ktlint_standard_package-name = disabled
 ktlint_standard_function-naming = disabled
+ktlint_standard_property-naming = disabled
+ktlint_standard_filename = disabled
+ktlint_standard_filename = disabled
